cluster/core/netpol/vernemq.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vernemq-ingress
  namespace: home-automation
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vernemq
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: vernemq
    ports:
    - protocol: TCP
      port: 4369
    - protocol: TCP
      port: 8443
    - protocol: TCP
      port: 8883
    - protocol: TCP
      port: 8888
    - protocol: TCP
      port: 9100
    - protocol: TCP
      port: 9101
    - protocol: TCP
      port: 9102
    - protocol: TCP
      port: 9103
    - protocol: TCP
      port: 9104
    - protocol: TCP
      port: 9105
    - protocol: TCP
      port: 9106
    - protocol: TCP
      port: 9107
    - protocol: TCP
      port: 9108
    - protocol: TCP
      port: 9109
    - protocol: TCP
      port: 44053
  - from:
    - ipBlock:
        cidr: 192.168.0.0/24
    ports:
    - protocol: TCP
      port: 1883
    - protocol: TCP
      port: 8443
    - protocol: TCP
      port: 8883
  - from:
    - ipBlock:
        cidr: 192.168.10.0/24
    - ipBlock:
        cidr: 192.168.20.0/24
    - ipBlock:
        cidr: 192.168.90.0/24
    ports:
    - protocol: TCP
      port: 1883
    - protocol: TCP
      port: 8883
  - from:
    - ipBlock:
        cidr: 192.168.30.100/32
    ports:
    - protocol: TCP
      port: 1883
    - protocol: TCP
      port: 8443
    - protocol: TCP
      port: 8883
  - from:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: home-assistant
    ports:
    - protocol: TCP
      port: 1883
    - protocol: TCP
      port: 8443
    - protocol: TCP
      port: 8883
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vernemq-egress
  namespace: home-automation
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vernemq
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: adguard
      podSelector:
        matchLabels:
          app.kubernetes.io/name: adguard-home
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.10/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: vernemq
    ports:
    - protocol: TCP
      port: 4369
    - protocol: TCP
      port: 8443
    - protocol: TCP
      port: 8883
    - protocol: TCP
      port: 8888
    - protocol: TCP
      port: 9100
    - protocol: TCP
      port: 9101
    - protocol: TCP
      port: 9102
    - protocol: TCP
      port: 9103
    - protocol: TCP
      port: 9104
    - protocol: TCP
      port: 9105
    - protocol: TCP
      port: 9106
    - protocol: TCP
      port: 9107
    - protocol: TCP
      port: 9108
    - protocol: TCP
      port: 9109
    - protocol: TCP
      port: 44053
  - to:
    - ipBlock:
        cidr: 192.168.0.21/32
    - ipBlock:
        cidr: 192.168.0.22/32
    - ipBlock:
        cidr: 192.168.0.23/32
    ports:
    - port: 6443
      protocol: TCP
